nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: kubernetes-101
spec:
  ports:
  - name: nginx
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
  type: ClusterIP
